--- a/.env.development.local
+++ b/.env.development.local
@@ -1,3 +1,6 @@
 RIVAL_BOT_URL=https://us-central1-rival-chatbot-challenge.cloudfunctions.net
 LOG_LEVEL=silent
 CONVERSATION_LENGTH=5
+
+USERNAME=billgates
+EMAIL=thisisbill@example.com
